feat: 语法适配&本地部署地址变更&临时文件地址适配&添加直接与大模型对话的接口